src/main/java/com/example/querydsl/error/common/type/shop/customer/CustomerException.java
package com.example.querydsl.error.common.type.shop.customer;

public class CustomerException extends Exception {
    public CustomerException(String error) {
        super(error);
    }
}
